public enum Style {
    A, F;

    public String toString()
    {
        switch(this){
            case A: return "A";
            default: return "F";
        }
    }
}
